# backend/internal/controller/http/routes.go
@@ -1,0 +1,18 @@
+package httpapi
+
+const (
+	apiV1Path               = "/api/v1"
+	routeRootPath           = "/"
+	routeCollectionPath     = ""
+	routeLoginPath          = "/login"
+	routeHealthPath         = "/health"
+	routeAuthPath           = "/auth"
+	routeGooglePath         = "/google"
+	routeGoogleCallbackPath = "/google/callback"
+	routeProfilePath        = "/profile"
+	routeHomePath           = "/home"
+	routeCategoriesPath     = "/categories"
+	routeWalletsPath        = "/wallets"
+	routeTransactionsPath   = "/transactions"
+	routeIDPath             = "/:id"
+)
